Correcao no botao pagar todas as parcelas filtradas, pega todas as parcelas do grid sem precisar selecionar todas, valida se o grid esta vazio e se realmente qr realizar a  operacao. Tbm pode selecionar mais de um item para pagar.

--- a/CFP.App/Formularios/Financeiros/Consultas/ucConsultaContas.xaml
+++ b/CFP.App/Formularios/Financeiros/Consultas/ucConsultaContas.xaml
@@ -210,6 +210,7 @@
                     </DataGrid.Columns>
                     <DataGrid.ContextMenu>
                         <ContextMenu>
+                            <MenuItem x:Name="menuItemPagarSelecionados" Header="Pagar Parcelas Selecionadas" Click="menuItemPagarSelecionados_Click" ></MenuItem>
                             <MenuItem x:Name="menuItemExportarExcel" Header="Exportar Excel" Click="menuItemExportarExcel_Click" ></MenuItem>
                         </ContextMenu>
                     </DataGrid.ContextMenu>
