--- a/CFP.App/Formularios/Financeiros/TelasConfirmacoes/ConfirmacaoPagamentoParcela.xaml
+++ b/CFP.App/Formularios/Financeiros/TelasConfirmacoes/ConfirmacaoPagamentoParcela.xaml
@@ -236,10 +236,9 @@
                         <Button x:Name="btConfirmar"
                                 Grid.Column="2"
                                 Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
-                                Height="50" Width="50" 
+                                Height="Auto" Width="50" 
                                 Background="#FF1F3D68" 
-                                HorizontalAlignment="Center" 
-                                VerticalAlignment="Top"
+                                HorizontalAlignment="Center"
                                 BorderBrush="#FF1F3D68" 
                                 Click="btConfirmar_Click" 
                                 TabIndex="7" Margin="1,0,0.2,-0.4" >
