--- a/CFP.App/Formularios/Financeiros/UserControlCofre.xaml
+++ b/CFP.App/Formularios/Financeiros/UserControlCofre.xaml
@@ -139,7 +139,7 @@
                     <DataGrid.ContextMenu>
                         <ContextMenu>
                             <MenuItem x:Name="menuItemExportarExcel" Header="Exportar Excel" Click="menuItemExportarExcel_Click"></MenuItem>
-                            <MenuItem x:Name="menuItemExportarPdf" Header="Exportar PDF" Click="menuItemExportarPdf_Click"></MenuItem>
+                            <!--<MenuItem x:Name="menuItemExportarPdf" Header="Exportar PDF" Click="menuItemExportarPdf_Click"></MenuItem>-->
                         </ContextMenu>
                     </DataGrid.ContextMenu>
                 </DataGrid>
