Correcao, telas que informam valor da parcela foi alterado para pegar sempre o valor reajustado.

--- a/CFP.App/Formularios/Financeiros/Consultas/ucAlertaContas.xaml
+++ b/CFP.App/Formularios/Financeiros/Consultas/ucAlertaContas.xaml
@@ -38,7 +38,8 @@
                     <DataGridTextColumn Header="Tipo Alerta" Binding="{Binding TipoAlertaContas}" />
                     <DataGridTextColumn Header="Mensagem" Binding="{Binding Mensagem}" />
                     <DataGridTextColumn Header="Conta" Binding="{Binding DescricaoCompleta}" />
-                    <DataGridTextColumn Header="Valor" Binding="{Binding ContaPagamento.ValorParcela, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" />
+                    <DataGridTextColumn Header="V. Parcela" Binding="{Binding ContaPagamento.ValorParcela, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" />
+                    <DataGridTextColumn Header="V. Reajustado" Binding="{Binding ContaPagamento.ValorReajustado, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" />
                     <DataGridTextColumn Header="Vencimento" Binding="{Binding ContaPagamento.DataVencimento, StringFormat=d,  ConverterCulture='pt-BR'}" />
                     <!--<DataGridTemplateColumn>
                         <DataGridTemplateColumn.CellTemplate>
