--- a/CFP.App/Formularios/Financeiros/UserControlCofre.xaml
+++ b/CFP.App/Formularios/Financeiros/UserControlCofre.xaml
@@ -79,10 +79,10 @@
                     Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
                     Height="60" Width="60" 
                     HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
+                    VerticalAlignment="Bottom"
                     Background="#FF1F3D68" 
                     BorderBrush="#FF1F3D68"
-                    ToolTip="Transferencia entre cofres" Click="btTranferenciaCofres_Click"  >
+                    ToolTip="Transferencia entre cofres" Click="btTranferenciaCofres_Click" Margin="1,0,2,5"  >
                 <materialDesign:PackIcon 
                     Kind="BankTransfer"  
                     Width="50" 
