Correcao na lista de parcelas alteradas durante retorno da tela de confirmacacao de pagamento, ao voltar ele estava mantendo os campos alterados mesmo nao podendo.

--- a/CFP.App/Formularios/Cadastros/UserControlCadastroFormaPagamento.xaml
+++ b/CFP.App/Formularios/Cadastros/UserControlCadastroFormaPagamento.xaml
@@ -162,7 +162,7 @@
                 </CheckBox>
                 <CheckBox x:Name="chkRemoveCofre" 
                           Grid.Row="4"
-                          Content="Remove do Cofre?"
+                          Content="Débito Automático?"
                           FontFamily="Champagne &amp; Limousines" 
                                 FontSize="20"  
                                 Foreground="#FF1F3D68"
