Nova propriedade adicionada na classe pessoa, ela permite definir a se renda da pessoa sera calculada em outras situacoes.

--- a/CFP.App/Formularios/Cadastros/UserControlPessoa.xaml
+++ b/CFP.App/Formularios/Cadastros/UserControlPessoa.xaml
@@ -95,15 +95,30 @@
                      FontSize="20" 
                      Foreground="#FF1F3D68" />
 
-                    <ComboBox 
-                    x:Name="cmbSituacao"
-                    Grid.Row="1"
-                     materialDesign:HintAssist.Hint="Situação" 
-                     Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
-                     FontFamily="Champagne &amp; Limousines" 
-                     FontSize="20" 
-                     Foreground="#FF1F3D68" VerticalAlignment="Stretch"  
-                     />
+                    <Grid Grid.Row="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="150"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <ComboBox 
+                                 x:Name="cmbSituacao"
+                                 Grid.Column="0"
+                                 materialDesign:HintAssist.Hint="Situação" 
+                                 Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
+                                 FontFamily="Champagne &amp; Limousines" 
+                                 FontSize="20" 
+                                 Foreground="#FF1F3D68" VerticalAlignment="Stretch"/>
+                        <CheckBox x:Name="chkTotalRendaParaCalculos" 
+                          Grid.Column="1"
+                          Content="Usar Rendas Para Cálculos?"
+                          FontFamily="Champagne &amp; Limousines" 
+                                FontSize="18"  
+                                Foreground="#FF1F3D68"
+                                Style="{StaticResource MaterialDesignFilterChipAccentCheckBox}"
+                                  HorizontalAlignment="Center">
+                        </CheckBox>
+                    </Grid>
+                   
 
                     <GroupBox x:Name="GroupBoxRendas"
                     Header="Defina sua Renda" 
@@ -126,7 +141,10 @@
                                  FontFamily="Champagne &amp; Limousines" 
                                  FontSize="20" 
                                  Foreground="#FF1F3D68"  
-                                 VerticalAlignment="Top" PreviewTextInput="txtRendaBruto_PreviewTextInput" PreviewKeyDown="txtRendaBruto_PreviewKeyDown" TextChanged="txtRendaBruto_TextChanged" />
+                                 VerticalAlignment="Top" 
+                                 PreviewTextInput="txtRendaBruto_PreviewTextInput" 
+                                 PreviewKeyDown="txtRendaBruto_PreviewKeyDown" 
+                                 TextChanged="txtRendaBruto_TextChanged" />
 
                             <TextBox
                                  x:Name="txtRendaLiquida"
@@ -135,22 +153,26 @@
                                  FontFamily="Champagne &amp; Limousines" 
                                  FontSize="20" 
                                  Foreground="#FF1F3D68"  
-                                 VerticalAlignment="Top" PreviewTextInput="txtRendaLiquida_PreviewTextInput" PreviewKeyDown="txtRendaLiquida_PreviewKeyDown" TextChanged="txtRendaLiquida_TextChanged"/>
+                                 VerticalAlignment="Top" 
+                                 PreviewTextInput="txtRendaLiquida_PreviewTextInput" 
+                                PreviewKeyDown="txtRendaLiquida_PreviewKeyDown" 
+                                TextChanged="txtRendaLiquida_TextChanged"/>
 
                             <Grid x:Name="GridBotoesGroupBoxRendas" Height="79" >
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="120"/>
+                                    <ColumnDefinition Width="180"/>
 
                                 </Grid.ColumnDefinitions>
 
-                                <Button x:Name="btCalcular" Grid.Column="0"
+                                <Button x:Name="btCalcular" Grid.Column="1"
                                     Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
                                     Height="55" 
                                     Width="55" 
                                     Background="#FF1F3D68" BorderBrush="#FF1F3D68" HorizontalAlignment="Left">
                                     <materialDesign:PackIcon 
                                         VerticalAlignment="Center"
+                                        HorizontalAlignment="Left"
                                         Kind="Calculator"  
                                         Width="45" 
                                         Height="45"/>
@@ -160,7 +182,10 @@
                                     Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
                                     Height="55" 
                                     Width="55"
-                                    Background="#FF1F3D68" BorderBrush="#FF1F3D68" HorizontalAlignment="Left" Click="btAdd_Click">
+                                    Background="#FF1F3D68" 
+                                        BorderBrush="#FF1F3D68" 
+                                        HorizontalAlignment="Center" 
+                                        Click="btAdd_Click">
                                     <materialDesign:PackIcon 
                                         Kind="Add"  
                                         Width="45" 
@@ -194,7 +219,7 @@
                           Foreground="#FF1F3D68"
                           Style="{StaticResource MaterialDesignChoiceChipAccentListBox}"
                               VerticalAlignment="Stretch"
-                              HorizontalAlignment="Stretch"
+                              HorizontalAlignment="Center"
                               Margin="5 0 5 0" SelectionMode="Multiple">
                         <ListView.View>
                             <GridView x:Name="grdNomes">
