--- a/CFP.App/Formularios/Principais/Principal.xaml
+++ b/CFP.App/Formularios/Principais/Principal.xaml
@@ -104,13 +104,12 @@
                             <!--A pagar -->
                             <Button x:Name="btAPagar"
                                     Style="{StaticResource MaterialDesignFloatingActionDarkButton}" 
-                                    Height="90" Width="90"
+                                    Height="Auto" Width="90"
                                     Grid.Column="0"  Grid.RowSpan="2" 
-                                    HorizontalAlignment="Stretch"
-                                    VerticalAlignment="Stretch" 
+                                    HorizontalAlignment="Stretch" 
                                     ToolTip="Resumo Conta a Pagar"
                                     Background="#FF1F3D68"
-                                    BorderBrush="#FF1F3D68" Click="btAPagar_Click">
+                                    BorderBrush="#FF1F3D68" Click="btAPagar_Click" Margin="5,3,5,2.2">
                                 <materialDesign:PackIcon
                                             Kind="AccountCash"
                                             Width="90"
@@ -321,71 +320,30 @@
                         </Grid>
                     </Border>
 
-                    <!--Backup-->
-                    <!--
-                    <Border Margin="10 20 10 10" 
+                    <Border x:Name="bRestante" Margin="10 20 10 10" 
                             Grid.Row="1"
-                                Grid.Column="2" Grid.ColumnSpan="2" 
-                                Background="Azure" 
+                                Grid.Column="0" Grid.ColumnSpan="4" 
+                                Background="#FF1F3D68" 
                                 VerticalAlignment="Stretch" 
-                                CornerRadius="20">
-                        <Grid Margin="20 0 20 0">
-                            <Grid.RowDefinitions>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="100"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-
-                            -->
-                    <!--Backup -->
-                    <!--
-                            <Button x:Name="btBackup"
-                                    Style="{StaticResource MaterialDesignFloatingActionDarkButton}" 
-                                    Height="90" Width="90"
-                                    Grid.Column="0"  Grid.RowSpan="2" 
-                                    HorizontalAlignment="Stretch"
-                                    VerticalAlignment="Stretch" 
-                                    ToolTip="Visualização das conta a receber">
-                                <materialDesign:PackIcon
-                                            Kind="Backup"
-                                            Width="90"
-                                            Height="90"
-                                            Background="#FF1F3D68"
-                                            Foreground="White"/>
-                            </Button>
-                            <TextBlock Text=" SIT BACKUP" 
+                                CornerRadius="26">
+                        <TextBlock x:Name="txtRestante"
+                            Text="RESTANTE" 
                                        Grid.Row="0" Grid.Column="1"
                                        HorizontalAlignment="Center" 
                                        VerticalAlignment="Center"
                                        FontFamily="Champagne &amp; Limousines"
                                        FontSize="26"
                                        Style="{StaticResource MaterialDesignTextBlock}"
-                                       Foreground="#FF1F3D68"
-                                       Margin="5,5,0,0"/>
-                            <TextBlock Text="EM DIA" 
-                                       Grid.Row="1" Grid.Column="1"
-                                       HorizontalAlignment="Center" 
-                                       VerticalAlignment="Center"
-                                       FontFamily="Champagne &amp; Limousines"
-                                       FontSize="26"
-                                       Style="{StaticResource MaterialDesignTextBlock}"
-                                       Foreground="#FF1F3D68"
-                                       Margin="5,5,0,0"/>
-                            -->
-                    <!--Fim Backup -->
-                    <!--
+                                       Foreground="White"
+                                       Margin="5,5,0,0"
+                                   ToolTip="Valor que sobra no mês! Cálculo feito: Rendas da pessoa escolhida + total a receber - total a pagar"/>
+                    </Border>
 
-
-                        </Grid>
-                    </Border>-->
 
                     <!--Alerta Atraso-->
                     <Border x:Name="bAlertas" Margin="10 20 10 10" 
                             Grid.Row="1"
-                                Grid.Column="0" Grid.ColumnSpan="2" 
+                                Grid.Column="4" Grid.ColumnSpan="2" 
                                 Background="#FF1F3D68" 
                                 VerticalAlignment="Stretch" 
                                 CornerRadius="20">
